Refactor PatternTest and fix its bugs